--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                         </p>
                         <a href="#" class="font-black uppercase">Ver Galería <span class="icon">arrow_back</span></a>
                     </div>
-                    <div class="service-image" data-bg="assets/img/renders/render-0.jpeg">
+                    <div class="service-image" data-bg="assets/img/renders/render-0.jpeg" data-parallax>
                     </div>
                 </section>
 
@@ -176,7 +176,7 @@
                         <a href="#" class="font-black uppercase">Ver Proyectos <span
                                 class="icon">arrow_forward</span></a>
                     </div>
-                    <div class="service-image" data-bg="assets/img/webdesing/webdesing-1.jpeg">
+                    <div class="service-image" data-bg="assets/img/webdesing/webdesing-1.jpeg" data-parallax>
                     </div>
                 </section>
 
@@ -193,7 +193,7 @@
                         <a href="#" class="font-black uppercase">Explorar Grabados <span
                                 class="icon">arrow_back</span></a>
                     </div>
-                    <div class="service-image"
+                    <div class="service-image" data-parallax
                         data-bg="https://images.unsplash.com/photo-1581092160562-40aa08e78837?auto=format&fit=crop&q=80&w=2070">
                     </div>
                 </section>
@@ -211,7 +211,7 @@
                         <a href="#" class="font-black uppercase" style="color: black;">Ver Proyectos <span
                                 class="icon">arrow_forward</span></a>
                     </div>
-                    <div class="service-image"
+                    <div class="service-image" data-parallax
                         data-bg="https://images.unsplash.com/photo-1563206767-5b18f218e7de?auto=format&fit=crop&q=80&w=2069">
                     </div>
                 </section>
