fix: arrow_back->arrow_forward en Ver Galeria, flechas alineadas con service-link flex, año 2026

--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
                             Construímos marcas con alma y propósito. Desde el logo hasta la narrativa visual completa
                             que conecta con tu audiencia.
                         </p>
-                        <a href="#" class="font-black uppercase" style="color: white;">Ver Identidades <span
-                                class="icon">arrow_forward</span></a>
+                        <a href="#" class="font-black uppercase service-link" style="color: white;">Ver Identidades
+                            <span class="icon">arrow_forward</span></a>
                     </div>
                     <div class="brand-grid">
                         <div class="brand-cell">
@@ -157,7 +157,8 @@
                             Visualizaciones arquitectónicas fotorrealistas. Convertimos planos en sueños digitales para
                             el mercado inmobiliario de lujo.
                         </p>
-                        <a href="#" class="font-black uppercase">Ver Galería <span class="icon">arrow_back</span></a>
+                        <a href="#" class="font-black uppercase service-link">Ver Galería <span
+                                class="icon">arrow_forward</span></a>
                     </div>
                     <div class="service-image" data-bg="assets/img/renders/render-0.jpeg" data-parallax>
                     </div>
@@ -173,7 +174,7 @@
                             Experiencias digitales de alta tensión. Sitios web rápidos y centrados en el usuario que
                             dominan todas las pantallas.
                         </p>
-                        <a href="#" class="font-black uppercase">Ver Proyectos <span
+                        <a href="#" class="font-black uppercase service-link">Ver Proyectos <span
                                 class="icon">arrow_forward</span></a>
                     </div>
                     <div class="service-image" data-bg="assets/img/webdesing/webdesing-1.jpeg" data-parallax>
@@ -304,7 +305,7 @@
                 </div>
                 <div
                     style="margin-top: 4rem; padding-top: 2rem; border-top: 1px solid rgba(255,255,255,0.1); font-size: 0.75rem; display: flex; justify-content: space-between;">
-                    <p>&copy; 2024 POLYMedia. Todos los derechos reservados.</p>
+                    <p>&copy; 2026 POLYMedia. Todos los derechos reservados.</p>
                     <div style="display: flex; gap: 1.5rem;">
                         <a href="#">Privacidad</a>
                         <a href="#">Términos</a>
