feat: nueva pagina galeria renders 3D con lightbox, grid masonry y navegacion por teclado/swipe

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                             Visualizaciones arquitectónicas fotorrealistas. Convertimos planos en sueños digitales para
                             el mercado inmobiliario de lujo.
                         </p>
-                        <a href="#" class="font-black uppercase service-link">Ver Galería <span
+                        <a href="renders.html" class="font-black uppercase service-link">Ver Galería <span
                                 class="icon">arrow_forward</span></a>
                     </div>
                     <div class="service-image" data-bg="assets/img/renders/render-0.jpeg" data-parallax>
