perf: comprime imagenes renders de 142MB a 3.1MB (98% ahorro), actualiza rutas PNG->JPEG

--- a/renders.html
+++ b/renders.html
@@ -94,7 +94,7 @@
 
                 <!-- Render 1 -->
                 <article class="gallery-card" data-index="1">
-                    <div class="gallery-card__img" style="background-image: url('assets/img/renders/render-1.jpg');">
+                    <div class="gallery-card__img" style="background-image: url('assets/img/renders/render-1.jpeg');">
                     </div>
                     <div class="gallery-card__overlay">
                         <span class="gallery-card__num">02</span>
@@ -103,7 +103,7 @@
                             <p class="gallery-card__meta">Interior · Recámara master</p>
                         </div>
                         <button class="gallery-card__zoom" aria-label="Ver imagen completa"
-                            data-src="assets/img/renders/render-1.jpg" data-title="Suite de Lujo"
+                            data-src="assets/img/renders/render-1.jpeg" data-title="Suite de Lujo"
                             data-meta="Interior · Recámara master">
                             <span class="icon">open_in_full</span>
                         </button>
@@ -112,7 +112,7 @@
 
                 <!-- Render 2 -->
                 <article class="gallery-card" data-index="2">
-                    <div class="gallery-card__img" style="background-image: url('assets/img/renders/render-2.png');">
+                    <div class="gallery-card__img" style="background-image: url('assets/img/renders/render-2.jpeg');">
                     </div>
                     <div class="gallery-card__overlay">
                         <span class="gallery-card__num">03</span>
@@ -121,7 +121,7 @@
                             <p class="gallery-card__meta">Exterior · Vista aérea</p>
                         </div>
                         <button class="gallery-card__zoom" aria-label="Ver imagen completa"
-                            data-src="assets/img/renders/render-2.png" data-title="Terraza Panorámica"
+                            data-src="assets/img/renders/render-2.jpeg" data-title="Terraza Panorámica"
                             data-meta="Exterior · Vista aérea">
                             <span class="icon">open_in_full</span>
                         </button>
@@ -130,7 +130,7 @@
 
                 <!-- Render 3 — Tall card -->
                 <article class="gallery-card card--tall" data-index="3">
-                    <div class="gallery-card__img" style="background-image: url('assets/img/renders/render-3.png');">
+                    <div class="gallery-card__img" style="background-image: url('assets/img/renders/render-3.jpeg');">
                     </div>
                     <div class="gallery-card__overlay">
                         <span class="gallery-card__num">04</span>
@@ -139,7 +139,7 @@
                             <p class="gallery-card__meta">Exterior · Vista frontal</p>
                         </div>
                         <button class="gallery-card__zoom" aria-label="Ver imagen completa"
-                            data-src="assets/img/renders/render-3.png" data-title="Fachada Contemporánea"
+                            data-src="assets/img/renders/render-3.jpeg" data-title="Fachada Contemporánea"
                             data-meta="Exterior · Vista frontal">
                             <span class="icon">open_in_full</span>
                         </button>
@@ -148,7 +148,7 @@
 
                 <!-- Render 4 -->
                 <article class="gallery-card" data-index="4">
-                    <div class="gallery-card__img" style="background-image: url('assets/img/renders/render-4.png');">
+                    <div class="gallery-card__img" style="background-image: url('assets/img/renders/render-4.jpeg');">
                     </div>
                     <div class="gallery-card__overlay">
                         <span class="gallery-card__num">05</span>
