fix: grid-auto-flow dense elimina huecos, reasigna card--tall/wide segun orientacion real de cada render

--- a/renders.html
+++ b/renders.html
@@ -110,8 +110,8 @@
                     </div>
                 </article>
 
-                <!-- Render 2 -->
-                <article class="gallery-card" data-index="2">
+                <!-- Render 2 — Fachada vertical: card tall -->
+                <article class="gallery-card card--tall" data-index="2">
                     <div class="gallery-card__img" style="background-image: url('assets/img/renders/render-2.jpeg');">
                     </div>
                     <div class="gallery-card__overlay">
@@ -128,8 +128,8 @@
                     </div>
                 </article>
 
-                <!-- Render 3 — Tall card -->
-                <article class="gallery-card card--tall" data-index="3">
+                <!-- Render 3 — Paisaje 4K: card wide -->
+                <article class="gallery-card card--wide" data-index="3">
                     <div class="gallery-card__img" style="background-image: url('assets/img/renders/render-3.jpeg');">
                     </div>
                     <div class="gallery-card__overlay">
@@ -164,8 +164,8 @@
                     </div>
                 </article>
 
-                <!-- Render 5 — Wide -->
-                <article class="gallery-card card--wide" data-index="5">
+                <!-- Render 5 — Interior vertical: card tall -->
+                <article class="gallery-card card--tall" data-index="5">
                     <div class="gallery-card__img" style="background-image: url('assets/img/renders/render-5.jpeg');">
                     </div>
                     <div class="gallery-card__overlay">
@@ -218,8 +218,8 @@
                     </div>
                 </article>
 
-                <!-- Render 8 — Tall -->
-                <article class="gallery-card card--tall" data-index="8">
+                <!-- Render 8 — Pergola paisaje: regular -->
+                <article class="gallery-card" data-index="8">
                     <div class="gallery-card__img" style="background-image: url('assets/img/renders/render-8.jpeg');">
                     </div>
                     <div class="gallery-card__overlay">
