feat: reemplaza icono polymer y texto POLYMedia por SVGs reales del cliente en index.html y renders.html

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             <div class="container">
                 <div class="logo-group" id="main-logo">
                     <div class="logo-icon">
-                        <span class="icon">polymer</span>
+                        <img src="assets/svg/logos/logotipo%20polymedia-03.svg" alt="POLYMedia" class="logo-icon-svg">
                     </div>
-                    <span class="logo-text">POLY<span class="text-primary">Media</span></span>
+                    <img src="assets/svg/logos/logotipo%20polymedia-01.svg" alt="POLYMedia" class="logo-wordmark">
                 </div>
 
                 <!-- Hamburger Button -->
