--- a/renders.html
+++ b/renders.html
@@ -25,9 +25,9 @@
         <div class="container">
             <a href="index.html" class="logo-group" id="main-logo" aria-label="Volver al inicio">
                 <div class="logo-icon">
-                    <span class="icon">polymer</span>
+                    <img src="assets/svg/logos/logotipo%20polymedia-03.svg" alt="POLYMedia" class="logo-icon-svg">
                 </div>
-                <span class="logo-text">POLY<span class="text-primary">Media</span></span>
+                <img src="assets/svg/logos/logotipo%20polymedia-01.svg" alt="POLYMedia" class="logo-wordmark">
             </a>
             <a href="index.html" class="back-link">
                 <span class="icon">arrow_back</span>
