feat: favicon SVG con simbolo polymedia-03 en rosa #cc0d5f, enlazado en index.html y renders.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>POLYMedia | Impacto Digital de Alta Tensión</title>
+    <link rel="icon" type="image/svg+xml" href="assets/svg/logos/favicon.svg">
 
     <!-- SEO Meta Tags -->
     <meta name="description"
