--- a/renders.html
+++ b/renders.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Renders 3D | POLYMedia — Visualización Arquitectónica Premium</title>
+    <link rel="icon" type="image/svg+xml" href="assets/svg/logos/favicon.svg">
 
     <!-- SEO -->
     <meta name="description"
