experiment: reemplaza texto POLY! y MEDIA del hero por SVGs logo-poly y logo-media

--- a/index.html
+++ b/index.html
@@ -80,20 +80,13 @@
 
                 <div class="hero-title-wrapper">
                     <div class="title-row">
-                        <div style="position: relative; z-index: 5;">
-                            <span class="text-giant skew-1 shadow-primary anim-digital">PO</span>
-                            <span class="text-giant text-outline skew-2"
-                                style="position: absolute; right: -2rem; opacity: 0.3;">PO</span>
-                        </div>
-                        <div class="ly-box" style="position: relative; z-index: 10;">
-                            <span class="text-giant shadow-blue skew-3 anim-digital">LY!</span>
-                        </div>
+                        <img src="assets/svg/logos/logo-poly.svg" alt="POLY" class="hero-svg-poly">
                     </div>
 
                     <div class="impact-box">
-                        <div class="bg-vibrant-green uppercase font-black text-jumbo skew-4 anim-glitch"
-                            data-text="MEDIA" style="color: black; padding: 0 1rem; position: relative; z-index: 20;">
-                            MEDIA
+                        <div class="bg-vibrant-green skew-4 anim-glitch" data-text="MEDIA"
+                            style="padding: 0.5rem 1rem; position: relative; z-index: 20; display:flex; align-items:center;">
+                            <img src="assets/svg/logos/logo-media.svg" alt="MEDIA" class="hero-svg-media">
                         </div>
                     </div>
 
