fix: hero SVG - quita sombra azul POLY, ghost outline translucido, MEDIA fondo rosa con anim-digital

--- a/index.html
+++ b/index.html
@@ -79,14 +79,20 @@
                 </div>
 
                 <div class="hero-title-wrapper">
-                    <div class="title-row">
-                        <img src="assets/svg/logos/logo-poly.svg" alt="POLY" class="hero-svg-poly">
+                    <div class="title-row skew-1">
+                        <div style="position: relative; display: inline-block;">
+                            <img src="assets/svg/logos/logo-poly.svg" alt="POLY"
+                                class="hero-svg-poly shadow-primary anim-digital">
+                            <!-- Ghost translucido como el outline original -->
+                            <img src="assets/svg/logos/logo-poly.svg" alt="" aria-hidden="true"
+                                class="hero-svg-poly hero-svg-poly-ghost">
+                        </div>
                     </div>
 
                     <div class="impact-box">
-                        <div class="bg-vibrant-green skew-4 anim-glitch" data-text="MEDIA"
+                        <div class="bg-primary skew-4"
                             style="padding: 0.5rem 1rem; position: relative; z-index: 20; display:flex; align-items:center;">
-                            <img src="assets/svg/logos/logo-media.svg" alt="MEDIA" class="hero-svg-media">
+                            <img src="assets/svg/logos/logo-media.svg" alt="MEDIA" class="hero-svg-media anim-digital">
                         </div>
                     </div>
 
