fix: POLY hero movil - ajuste fino translate(-10%, -18%), poquito izquierda y arriba

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 </div>
 
                 <div class="hero-title-wrapper">
-                    <div class="title-row skew-1">
+                    <div class="title-row">
                         <div style="position: relative; display: inline-block;">
                             <img src="assets/svg/logos/logo-poly.svg" alt="POLY"
                                 class="hero-svg-poly shadow-primary anim-digital">
